--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="Description" content="DnDice, a straight-forward, simple way to roll dice for DnD.">
+  	<meta name="Description" content="DnDice, a straight-forward, simple way to roll dice for DnD.">
 	<title>DnDice</title>
 	<link rel="stylesheet" href="style.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
+	<script defer src="script.js"></script>
 </head>
 
 
@@ -27,7 +28,5 @@
 </div>
 
 </body>
-
-<script src="script.js"></script>
 
 </html>
